# AXON

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: dependencies.py
apps/api/app/api/routes/: agents.py  evaluations.py  health.py  knowledge_bases.py  tools.py  workflows.py
apps/api/app/core/: config.py  errors.py  logging.py
apps/api/app/db/: models.py  session.py
apps/api/app/db/migrations/: env.py
apps/api/app/db/migrations/versions/: 0001_create_app_metadata.py  0002_create_phase1_agent_tables.py  0003_create_phase2_tool_tables.py  0004_create_phase3_workflow_runtime_tables.py  0005_create_phase4_rag_tables.py  0006_create_phase6_governance_tables.py  0007_add_run_worker_claims.py
apps/api/app/schemas/: agents.py  evaluations.py  knowledge_bases.py  tools.py  workflows.py
apps/api/app/services/: agents.py  context.py  embeddings.py  evaluations.py  knowledge_bases.py  llm.py  readiness.py  storage.py  tools.py  workflows.py
apps/api/app/services/workflows/: __init__.py  errors.py  events.py  executor.py  graph.py  repository.py  responses.py  service.py  utils.py
apps/api/app/worker/: main.py
apps/api/tests/: test_agents_api.py  test_embedding_adapter.py  test_evaluations_api.py  test_health.py  test_knowledge_bases_api.py  test_llm_adapter.py  test_settings.py  test_tool_executor.py  test_tools_api.py  test_worker_main.py  test_workflows_api.py
apps/web/: .dockerignore  Dockerfile  (+3 more)
(+58 files in other folders)
