[project]
name = "agentflow-api"
version = "0.1.0"
description = "AgentFlow FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "boto3>=1.35.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.7.0",
  "pypdf>=4.3.0",
  "python-multipart>=0.0.9",
  "redis>=5.2.0",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0"
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
